linting a bit. May not actually be functional rip